# fuego-GTR-wallet

./: .gitignore  BUILD_FIX_SUMMARY.md  CI-FIXES-SUMMARY.md  CONTRIBUTING.md  DEV_PLAN_PLACEHOLDERS.md  LICENSE  MACOS_SILICON_CRASH_FIX.md  PHASE_1_3_PLAN.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  test_fixes.md
.github/workflows/: build-and-release.yml  ci.yml  dependency-updates.yml  quality-assurance.yml  tauri-linux.yml  test-build.yml
scripts/: check-ci-status.sh  ci-monitor.sh  fetch_cryptonote.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  crypto_note_ffi.cpp  crypto_note_ffi.h  fuego_wallet_real.cpp  fuego_wallet_real.h  tauri.conf.json
src-tauri/cryptonote/: CMakeLists.txt
src-tauri/cryptonote/src/CryptoNoteCore/: Blockchain.cpp
src-tauri/cryptonote/src/PaymentGate/: PaymentServiceJsonRpcMessages.cpp
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/advanced/: mod.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/crypto/: ffi.rs  mod.rs  real_cryptonote.rs
src-tauri/src/i18n/: mod.rs
src-tauri/src/optimization/: mod.rs
src-tauri/src/performance/: mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/utils/: error.rs  mod.rs
src/assets/: fuegogtr.icns
workflows/: build-and-release.yml  dependency-updates.yml  quality-assurance.yml
