[package]
name = "fuego-tauri"
version = "0.1.0"
description = "Fuego GTR Wallet - secure & modern desktop XFG wallet app. Featuring decentralized privacy banking, send/receive XFG, integrated pool mining & more. Powered by Fuego L1 blockchain network."
authors = ["Elderfire Privacy Group"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fuego_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-store = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
base64ct = "=1.7.3"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
cc = "1.0"
dirs = "5.0"
zip = "0.6"
sysinfo = "0.30"
bs58 = "0.5"
